<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">spaRSS DecSync</string>
    <string name="about_spaRSS">About spaRSS DecSync</string>
    <string name="welcome_title">Welcome to spaRSS. Would you like to add one feed?</string>
    <string name="never">never</string>
    <string name="update">Update</string>
    <string name="colon">:\u00A0</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_all_read">Mark all as read</string>
    <string name="menu_show_new_entries">Show new entries</string>
    <string name="spaRSS_feeds">spaRSS feeds</string>
    <string name="error">Error</string>
    <string name="network_error">The network is not set up</string>
    <string name="loading">Loading…</string>
    <string name="no_result">No result</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="back_again_to_quit">Press back once more to exit</string>
    <string name="no_new_entries">No new entries to display</string>
    <string name="decsync_disabled">DecSync support disabled</string>
    <string name="title_activity_intro">Introduction</string>
    <string name="intro_welcome_title">Welcome to spaRSS DecSync</string>
    <string name="intro_welcome_desc">spaRSS DecSync is a fork of spaRSS which adds synchronization using DecSync</string>
    <string name="intro_directory_title">DecSync Directory</string>
    <string name="intro_directory_desc">To start synchronizing, all you have to do is synchronize the DecSync directory</string>
    <string name="intro_directory_button">Choose directory</string>
    <string name="intro_directory_checkbox">Enable DecSync synchronization</string>
    <string name="intro_directory_select">Please select a DecSync directory</string>
    <string name="title_activity_saf_update">Android update</string>
    <string name="saf_update_desc">Due to an Android update you need to reselect the DecSync directory</string>
    <string name="feeds">Feeds</string>
    <string name="menu_add_feed">Add feed</string>
    <string name="no_feeds">No feeds</string>
    <string name="no_filters">No rules</string>
    <string name="context_menu_delete">Delete</string>
    <string name="edit_feed_title">Edit feed</string>
    <string name="new_feed_title">New feed</string>
    <string name="context_menu_edit">Edit</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_import">Import from OPML</string>
    <string name="menu_export">Export to OPML</string>
    <string name="storage_request_explanation">To be able to import or export the feeds from or to a file, you must allow the application to access to the storage memory.</string>
    <string name="error_feed_error">The feed website is unreachable.</string>
    <string name="error_feed_process">The feed can not be processed.</string>
    <string name="error_feed_url_exists">The address already exists.</string>
    <string name="error_feed_import">The selected file could not be imported.</string>
    <string name="error_feed_export">The export has failed. Make sure you have a writable SD-card mounted.</string>
    <string name="error_external_storage_not_available">The external storage (e.g. SD-card) is not available.</string>
    <string name="feed_no_summary">\u003c No summary available. \u003e</string>
    <string name="feed_url">URL</string>
    <string name="optional">(optional)</string>
    <string name="website_or_feed">(website or feed)</string>
    <string name="feed_cookie">Authentication Cookie</string>
    <string name="cookiename">Name</string>
    <string name="cookievalue">Value</string>
    <string name="feed_httpAuth">HTTP Authentication</string>
    <string name="loginhttpAuth">Login</string>
    <string name="passwordhttpAuth">Password</string>
    <string name="tab_feed_title">Feed</string>
    <string name="tab_filters_title">Filter</string>
    <string name="tab_advanced_title">Advanced</string>
    <string name="feed_title">Title</string>
    <string name="feed_filters">Filter rules</string>
    <string name="filter_add_title">Add rule</string>
    <string name="filter_delete_title">Delete rule</string>
    <string name="filter_help">Filter Help</string>
    <string name="filter_edit_title">Edit rule</string>
    <string name="filter_is_regex">is a regular expression</string>
    <string name="filter_apply_to_title">Apply to title</string>
    <string name="filter_apply_to_content">Apply to content</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="feed_search">Feed search</string>
    <string name="select_file">Select file (SD-root)</string>
    <string name="question_delete_feed">Do you really want to delete this feed?</string>
    <string name="question_delete_group">Do you really want to delete this group and all of its feeds? </string>
    <string name="question_delete_filter">Do you really want to delete this filter?</string>
    <string name="add_group_title">Select group name</string>
    <string name="edit_group_title">Edit group name</string>
    <string name="message_exported_to">Exported into %s.</string>
    <string name="to_group_title">Feed move action</string>
    <string name="to_group_message">You can either put this feed into or above this group. What do you want to do?</string>
    <string name="to_group_above">Above the group</string>
    <string name="to_group_into">Into the group</string>
    <string name="add_custom_feed">Add a custom feed or search for one</string>
    <string name="google_news_title">Google News topics</string>
    <string name="google_news_indicator">Select one or several topics to add. Some of them may not be provided by Google for your language.</string>
    <string name="google_news_top_stories">Top Stories</string>
    <string name="google_news_world">World</string>
    <string name="google_news_business">Business</string>
    <string name="google_news_technology">Technology</string>
    <string name="google_news_entertainment">Entertainment</string>
    <string name="google_news_sports">Sports</string>
    <string name="google_news_science">Science</string>
    <string name="google_news_health">Health</string>
    <string name="google_news_custom_topic">Enter custom topic</string>
    <string name="all">Entries</string>
    <string name="no_entries">No entries</string>
    <string name="favorites">Starred</string>
    <string name="context_menu_hide_read">Hide read entries</string>
    <string name="context_menu_show_read">Show read entries</string>
    <string name="context_menu_share_starred">Share starred entries</string>
    <string name="menu_star">Star</string>
    <string name="menu_unstar">Unstar</string>
    <string name="menu_share">Share</string>
    <string name="menu_full_screen">Full screen</string>
    <string name="menu_copy_clipboard">Copy link</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string name="menu_switch_full_original">Show full content</string>
    <string name="share_favorites_title">spaRSS: starred entries</string>
    <string name="copied_clipboard">Link copied</string>
    <string name="get_full_text">Retrieve the full text</string>
    <string name="original_text">Show basic text</string>
    <string name="see_enclosure">See enclosure</string>
    <string name="see_link">See in browser</string>
    <string name="cant_open_link">No application found for this link</string>
    <string name="open_enclosure">Open enclosure</string>
    <string name="file">File</string>
    <string name="download_and_save">Download and save</string>
    <string name="open_link">Open link</string>
    <string name="tip_sentence">Tip: slide left to mark as read and slide right to mark as favorite</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="transparency">Transparency</string>
    <string name="settings_category_refresh">Automated refresh</string>
    <string name="settings_refresh_enabled">Enable automatic refresh</string>
    <string name="settings_refresh_enabled_description">Enable the automatic refresh of feeds</string>
    <string name="settings_refresh_interval">Refresh interval</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notifications_enabled">Enable notifications</string>
    <string name="settings_notifications_enabled_description">Enable notifications in case of new entries</string>
    <string name="settings_notifications_ringtone">Ringtone</string>
    <string name="settings_notifications_ringtone_none">None</string>
    <string name="settings_notifications_vibrate">Vibrate</string>
    <string name="settings_notifications_vibrate_description">Enable the vibration on new entries</string>
    <string name="settings_notifications_light">Light</string>
    <string name="settings_notifications_light_description">Enable notification light on new entries</string>
    <string name="settings_category_content_presentation">Content presentation</string>
    <string name="settings_light_theme">Light theme</string>
    <string name="settings_light_theme_description">Use the light theme</string>
    <string name="settings_left_panel">Navigation Drawer</string>
    <string name="settings_left_panel_description">Display the Navigation Drawer at startup of the application</string>
    <string name="settings_keep_time">Time that the entries will be kept</string>
    <string name="settings_display_images">Display images</string>
    <string name="settings_display_images_description">Display images in entries</string>
    <string name="settings_preload_image_mode">Preload images</string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_font_serif">Use Serif Font</string>
    <string name="settings_font_serif_description">Use Serif Font instead of Sans-Serif in articles</string>
    <string name="settings_display_oldest_first">Entries order</string>
    <string name="settings_display_oldest_first_description">Display oldest entries first</string>
    <string name="settings_display_entries_fullscreen">Auto-fullscreen entries</string>
    <string name="settings_display_entries_fullscreen_description">Automatically display entries in fullscreen</string>
    <string name="settings_refresh_on_open">Refresh feeds on open</string>
    <string name="settings_refresh_on_open_description">Refreshes all feeds after opening the application</string>
    <string name="settings_refresh_wifi_only">Refresh only over Wi-Fi</string>
    <string name="settings_refresh_wifi_only_description">Automatic refresh will only be done if Wi-Fi connection is available</string>
    <string name="settings_visible_feeds">Visible feeds</string>
    <string name="settings_widget_background">Background</string>
    <string name="settings_widget_background_description">Color and transparency of the widget background</string>
    <string name="all_feeds">All feeds (incl. future)</string>
    <string name="settings_screen_proxy">Proxy</string>
    <string name="settings_category_network">Network</string>
    <string name="settings_proxy_enabled">Enabled</string>
    <string name="settings_proxy_wifi_only">Wi-Fi only</string>
    <string name="settings_proxy_wifi_only_description">Use Proxy only for Wi-Fi</string>
    <string name="settings_proxy_host">Host</string>
    <string name="settings_proxy_port">Port</string>
    <string name="settings_proxy_type">Type</string>
    <string name="settings_mark_as_read">Display button "Mark all as read"</string>
    <string name="settings_mark_as_read_description">Show / Hide the button</string>
</resources>